  Minor Features:
    - Added the has_untradable_items field to trades in the trades JSON export, which indicates whether the trade contains any items that are initially untradable on its planet (only set to true for trades created by the silver item rank bonus).
    - Added item buffs for: burner mining drill, hazard concrete, spoilage, nutrients.
  Changes:
    - The trade overview sorting method "Distance from spawn" now compares the pathing distances from spawn for each trade, not the straight-line distances that would go over unclaimable hexes.
    - The is_interplanetary field in trades in the trades JSON export now corresponds to whether the trade contains any items that can only be obtained after importing at least one item from another planet.
    - Overhauled the system that determines which items are initially tradable on each planet.
        It used to be based on whether items were considered "interplanetary", but it is now based on which recipes are usable on each planet and when/where they're unlocked.
    - The command /set-item-value now marks an item as a raw resource on a planet rather than overriding its computed value directly.
        Useful for quickly integrating custom modded raw resources to compute their entire item value graph.
    - The command /remove-item-value now also clears the raw value entry set by /set-item-value, preventing it from reappearing after a solver run.
    - The number of items required to be ranked up for the quest "Catalog Completionist" is now dynamic, including rankable modded items.
    - Revised the tooltips for the item buffs "All Buffs Cost Reduced", "Unresearched Penalty Reduced", and "Strongbox Loot".
    - Reduced the total number of strongbox levels from 36 to 28.
    - Strongboxes at the maximum level no longer respawn when destroyed.
    - Reduced hex claim costs on all planets except Nauvis to reflect the item value rebalancing.
  Balancing:
    - Changed all exponential item buff scaling to linear.