@@ -598,8 +598,10 @@ script.on_event(defines.events.on_runtime_mod_setting_changed, function(event)
     local setting = event.setting:sub(10)
     if event.setting_type == "runtime-per-user" then
         event_system.trigger("runtime-setting-changed-" .. setting, event.player_index)
+        event_system.trigger("post-runtime-setting-changed-" .. setting, event.player_index)
     else
         event_system.trigger("runtime-setting-changed-" .. setting)
+        event_system.trigger("post-runtime-setting-changed-" .. setting)
     end
 end)
 
