@@ -21,6 +21,7 @@ Date: 20/2/26
   Minor Features:
     - Added the has_untradable_items field to trades in the trades JSON export, which indicates whether the trade contains any items that are initially untradable on its planet (only set to true for trades created by the silver item rank bonus).
     - Added item buffs for: burner mining drill, hazard concrete, spoilage, nutrients.
+    - Trades now reevaluate (changing item counts but not item types) when the "Base Trade Efficiency" setting is changed.
   Changes:
     - The trade overview sorting method "Distance from spawn" now compares the pathing distances from spawn for each trade, not the straight-line distances that would go over unclaimable hexes.
     - The is_interplanetary field in trades in the trades JSON export now corresponds to whether the trade contains any items that can only be obtained after importing at least one item from another planet.
